--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "list-operations",
+  "name": "lazit",
   "version": "1.0.0",
   "description": "ES6 comprehensions compatible list operations",
   "main": "src/index.js",
   "directories": {
-    "test": "tests"
+    "test": "test"
   },
   "scripts": {
     "test": "make test"
@@ -26,6 +26,9 @@
   },
   "devDependencies": {
     "babel": "^4.3.0",
-    "browserify": "^8.1.3"
+    "babelify": "^5.0.3",
+    "browserify": "^8.1.3",
+    "jshint": "^2.6.0",
+    "uglify-js": "^2.4.16"
   }
 }
