--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "author": "Mudit Ameta",
   "license": "MIT",
   "dependencies": {
-    "auto-curry": "^0.2.0"
+    "auto-curry": "^0.2.0",
+    "clone": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^4.3.0",
     "babelify": "^5.0.3",
     "browserify": "^8.1.3",
     "jshint": "^2.6.0",
