--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "clone": "^1.0.0"
   },
   "devDependencies": {
+    "babel": "^4.6.0",
     "babelify": "^5.0.3",
     "browserify": "^8.1.3",
     "jshint": "^2.6.0",
+    "mocha": "^2.1.0",
+    "should": "^5.0.1",
     "uglify-js": "^2.4.16"
   },
   "repository": {
