--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lazit",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-beta",
   "description": "Lazy, composable operations on iterators/generators for ES6 and beyond.",
   "main": "build/lazit.js",
   "directories": {
