--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
       2,
       "except-parens"
     ],
+    "no-underscore-dangle": 0,
     "no-console": 2,
     "no-constant-condition": 1,
     "no-debugger": 2,
@@ -61,7 +62,7 @@
     "valid-typeof": 2,
     "block-scoped-var": 2,
     "consistent-return": 1,
-    "curly": [2, "multi"],
+    "curly": [1, "multi"],
     "dot-notation": 2,
     "eqeqeq": 2,
     "guard-for-in": 2,
@@ -97,6 +98,7 @@
     "no-with": 2,
     "radix": 2,
     "strict": [2, "global"],
+    "yoda": 0,
     "no-delete-var": 2,
     "no-shadow": 1,
     "no-shadow-restricted-names": 2,
@@ -112,7 +114,7 @@
     "eol-last": 2,
     "key-spacing": [2, {"beforeColon": false, "afterColon": true}],
     "new-cap": 2,
-    "newline-after-var": [2, "always"],
+    "newline-after-var": [1, "always"],
     "no-lonely-if": 2,
     "no-mixed-spaces-and-tabs": 2,
     "no-new-object": 2,
