--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   },
   "devDependencies": {
     "babel": "^4.6.0",
+    "babel-eslint": "^3.0.1",
     "babelify": "^5.0.3",
     "browserify": "^8.1.3",
-    "jshint": "^2.6.0",
+    "eslint": "^0.19.0",
     "mocha": "^2.1.0",
     "should": "^5.0.1",
     "uglify-js": "^2.4.16"
